2on/backend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: 2on-backend
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
